Added moist adiabats to the skewt-bg at an interval of 4K from -20 through +40.

--- a/sounding.css
+++ b/sounding.css
@@ -101,7 +101,7 @@ textarea {
 }
 
 .moistline {
-   stroke: #33FFFF;
+   stroke: #33AAAA;
    stroke-width: 0.75px;
    fill: none;
    opacity: .5;
